# storage-plus

./: .gitignore  Cargo.toml  README.MD
migrations/00000000000000_create_devices/: up.sql
migrations/20250913000000_create_files/: up.sql
pkg/mod/cache/download/sumdb/sum.golang.org/lookup/golang.org/x/tools/: gopls@v0.20.0
pkg/mod/cache/download/sumdb/sum.golang.org/tile/8/0/x168/788.p/: 3
pkg/mod/cache/download/sumdb/sum.golang.org/tile/8/1/659.p/: 84
pkg/mod/cache/download/sumdb/sum.golang.org/tile/8/2/002.p/: 147
pkg/sumdb/sum.golang.org/: latest
src/: db.rs  lib.rs  logging.rs  mounter.rs  schema.rs  server.rs  storage.rs
src/entity/: device.rs  file_meta.rs  mod.rs
src/repo/: device_repo.rs  file_repo.rs  mod.rs
