[package]
name = "photo-plus"
version = "0.1.0"
edition = "2024"

[dependencies]
udev = "0.9"
log = "0.4"
env_logger = "0.11"
nix = { version = "0.27", features = ["poll"] }
clap = { version = "4.5", features = ["derive"] }
rusqlite = { version = "0.32", features = ["bundled"] }
anyhow = "1.0"
regex = "1"

