[package]
name = "storage-plus"
version = "0.1.0"
edition = "2024"

[dependencies]
udev = "0.9"
log = "0.4"
env_logger = "0.11"
nix = { version = "0.27", features = ["poll"] }
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
regex = "1"
diesel = { version = "2.1", features = ["sqlite", "r2d2"] }
diesel_migrations = { version = "2.1", features = ["sqlite"] }
r2d2 = "0.8"

# Web API server
actix-web = "4"
actix-files = "0.6"
actix-multipart = "0.6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs", "io-util", "time"] }
futures-util = "0.3"

